If for some reason packages in main do not have the "Supported" control field, catch this any return rather than blindly assuming the data to be there and crashing.

Also add a safeguard against malformed /etc/lsb-release files to prevent crashes if /etc/lsb-release happens to be malformed

BUG:264001
FIXED-IN:1.1.1